# poly-alpha

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  polyalpha-hedge-system-v2.md  polyalpha-hedge-system.md
config/: default.toml  live-ready-smoke.toml  multi-market-active.b1.60m.toml  multi-market-active.b1.toml  multi-market-active.b2.toml  multi-market-active.fresh.toml  multi-market-active.fresh3.toml  multi-market-active.generated.toml  multi-market-active.stable.toml
crates/polyalpha-audit/: Cargo.toml
crates/polyalpha-audit/src/: lib.rs  model.rs  reader.rs  warehouse.rs  writer.rs
crates/polyalpha-cli/: Cargo.toml
crates/polyalpha-cli/src/: args.rs  audit.rs  backtest.rs  backtest_rust.rs  commands.rs  main.rs  market_pool.rs  markets.rs  paper.rs  pulse.rs  runtime.rs  sim.rs  strategy_scope.rs
crates/polyalpha-cli/src/monitor/: app.rs  json_mode.rs  mod.rs  state.rs  ui.rs
crates/polyalpha-core/: Cargo.toml
crates/polyalpha-core/src/: channel.rs  config.rs  error.rs  event.rs  lib.rs
crates/polyalpha-core/src/socket/: client.rs  message.rs  mod.rs  server.rs
crates/polyalpha-core/src/traits/: alpha.rs  data_source.rs  executor.rs  mod.rs  risk.rs
crates/polyalpha-core/src/types/: decimal.rs  engine.rs  fill.rs  hedge.rs  market.rs  mod.rs  order.rs  orderbook.rs  planning.rs  position.rs  position_tracker.rs  risk.rs  signal.rs
crates/polyalpha-data/: Cargo.toml
crates/polyalpha-data/src/: error.rs  lib.rs  manager.rs  mock_source.rs  normalizer.rs
crates/polyalpha-data/src/live/: binance.rs  deribit.rs  mod.rs  okx.rs  polymarket.rs
crates/polyalpha-engine/: Cargo.toml
crates/polyalpha-engine/src/: lib.rs
crates/polyalpha-engine/tests/: price_only_parity.rs
crates/polyalpha-executor/: Cargo.toml
crates/polyalpha-executor/src/: binance.rs  dry_run.rs  lib.rs  manager.rs  okx.rs  orderbook_provider.rs  plan_state.rs  planner.rs  polymarket.rs  router.rs
crates/polyalpha-pulse/: Cargo.toml
crates/polyalpha-pulse/src/: audit.rs  detector.rs  hedge.rs  lib.rs  model.rs  monitor.rs  pricing.rs  runtime.rs  session.rs  signal.rs
crates/polyalpha-pulse/src/anchor/: deribit.rs  mod.rs  provider.rs  router.rs
crates/polyalpha-risk/: Cargo.toml
crates/polyalpha-risk/src/: in_memory.rs  lib.rs  position_tracker.rs
docs/: btc-basis-mvp-test-acceptance.md  btc-price-only-basis-spec.md  btc-price-only-long-sample-evaluation.md  current-status.md  project-memory.md  stable-sweep-2026-04-05.md
docs/superpowers/plans/: 2026-03-27-executable-planner-hard-cut-implementation.md  2026-04-01-band-policy-and-rejection-diagnostics.md  2026-04-02-market-tier-retention-plan.md  2026-04-02-strict-open-hedge-invariant.md  2026-04-03-cex-orderbook-canonical-storage.md  2026-04-03-delta-rebalance-cex-top-up-and-open-loss-guard.md  2026-04-03-live-intent-rejection-hardening.md  2026-04-05-per-asset-basis-overrides-and-sweep-artifacts.md  2026-04-05-stable-backtest-sweep.md  2026-04-06-binance-combined-ws-compression.md  2026-04-06-polymarket-ws-runtime-diagnostics.md  2026-04-07-cex-venue-update-dedup.md  2026-04-08-monitor-position-exit-now-economics.md  2026-04-08-monitor-unified-open-close-economics.md  2026-04-10-pulse-arb-runtime-implementation.md  2026-04-15-pulse-signal-realignment-implementation.md  2026-04-17-pulse-research-tape-implementation.md  2026-04-20-dislocation-continuation-matrix-implementation.md  2026-04-20-dislocation-strategy-matrix-implementation.md  2026-04-21-geometry-headroom-matrix.md
docs/superpowers/specs/: 2026-03-27-executable-planner-hard-cut-design.md  2026-04-02-monitor-market-tier-retention-design.md  2026-04-03-cex-orderbook-canonical-storage-design.md  2026-04-06-binance-combined-ws-compression-design.md  2026-04-08-monitor-position-exit-now-economics-design.md  2026-04-08-monitor-unified-open-close-economics-design.md  2026-04-10-pulse-arb-runtime-design.md  2026-04-15-pulse-signal-realignment-design.md  2026-04-16-pulse-dual-mode-reachability-design.md  2026-04-17-pulse-research-tape-design.md  2026-04-20-dislocation-continuation-matrix-design.md  2026-04-20-dislocation-strategy-matrix-design.md
requirements/: backtest-db.txt
scripts/: backtest_compare_report.py  btc_basis_backtest_report.py  build_btc_basis_backtest_db.py  compare_python_rust_market_stats.py  pulse_research_sweep.py  reconcile_python_rust_backtest.py  stable_backtest_sweep.py  top_minute_triage.py
scripts/tests/: module_loader.py  test_backtest_compare_report.py  test_btc_price_market_filter.py  test_causal_time_alignment.py  test_duckdb_uniqueness_guard.py  test_market_rule_parsing.py  test_pulse_research_sweep.py  test_python_cli_report_layer.py  test_rust_parity_fixture.py  test_stable_backtest_sweep.py  test_top_minute_triage.py
tests/fixtures/: btc_price_only_parity_cases.json
