[package]
name = "polyalpha-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
duckdb = { version = "1.10500.0", features = ["bundled"] }
polyalpha-core = { path = "../polyalpha-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
