[package]
name = "polyalpha-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
duckdb = { version = "1.10500.0", features = ["bundled"] }
futures = "0.3"
futures-util = "0.3"
libm = "0.2"
polyalpha-audit = { path = "../polyalpha-audit" }
polyalpha-core = { path = "../polyalpha-core" }
polyalpha-data = { path = "../polyalpha-data" }
polyalpha-engine = { path = "../polyalpha-engine" }
polyalpha-executor = { path = "../polyalpha-executor" }
polyalpha-pulse = { path = "../polyalpha-pulse" }
polyalpha-risk = { path = "../polyalpha-risk" }
ratatui = "0.28"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring", "aws_lc_rs"] }
rust_decimal.workspace = true
serde.workspace = true
serde_json = "1"
toml = "0.8"
tokio.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tracing.workspace = true
unicode-width = "0.2"
uuid.workspace = true
