[package]
name = "polyalpha-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
polyalpha-core = { path = "../polyalpha-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
