[package]
name = "polyalpha-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
libm = "0.2"
polyalpha-core = { path = "../polyalpha-core" }
rust_decimal.workspace = true
tokio.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json = "1"
