[package]
name = "polyalpha-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
polyalpha-core = { path = "../polyalpha-core" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
