[package]
name = "polyalpha-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22"
hmac = "0.12"
polyalpha-core = { path = "../polyalpha-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio.workspace = true
uuid.workspace = true
chrono = { version = "0.4", default-features = true, features = ["clock"] }
hex = "0.4"

[dev-dependencies]
