[package]
name = "polyalpha-pulse"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
polyalpha-audit = { path = "../polyalpha-audit" }
polyalpha-core = { path = "../polyalpha-core" }
polyalpha-data = { path = "../polyalpha-data" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
polyalpha-executor = { path = "../polyalpha-executor" }
